--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -17,6 +17,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: List frontend project files
-        run: |
-          cd AdminSystemUi
-          ls -l
+        run: ls -l
